Merge json files earlier in descriptor